WIP
-----------------------------
* General
  - [New]Add "Grid move" option under overlay menu and tray menu (by Bernat),
    which enables grid-snap effect while moving widget
    for easy alignment and repositioning.
    "Grid move size" option is accessible from compatibility config dialog.



2.3.1 (2023-11-12) Hotfix
-----------------------------
* Trailing Widget
  - Fixed FFB plot not displaying full range (absolute value).
  - Fixed small desync issue between different pedal or FFB plots.

* General
  - Removed string format on "id" key word.
  - Fixed fuel data loading error in fuel module.

2.3.0 (2023-11-11)
-----------------------------
* General
  - Fixed error in loading a different preset
    while previous preset is in saving process.
  - Change option name "rF2_process_id" to "process_id".
  - Rename unit option "elevation_unit" to "distance_unit",
    and currently is used by elevation & yellow flag distance display.
  - Fixed text string decode setting.

* [New]Trailing Widget (designed by DanRZ)
  - Show pedal trail history plot display,
    includes throttle, brake, clutch, force feedback.
  - Customizable size, scale, style, orientation, reference lines, etc.

* Relative Module
  - Fixed index out of range when returning
    to monitor while in spectate mode.

* Shared memory API
  - Add API control & data adapter to support different sims API in the future.
  - Add API name selector in Shared memory API config dialog.
  - Show API name & version info on main window status bar.

* Misc
  - Updated user guide.
  - Updated contributors.md with new contributor (DanRZ).

2.2.0 (2023-10-27)
-----------------------------
* General
  - Add "enable_translucent_background" option in Compatibility,
    which turns off translucent background if disabled.
  - Add "global_bkg_color" option in Compatibility,
    which sets global background color for all widgets.
    Note 1, global background color will only be visible