@@ -541,23 +541,21 @@ WIDGET_DEFAULT = {
         "bkg_color": "#222222",
         "show_circle_background": True,
         "bkg_color_circle": "#CC222222",
-        "show_dot": True,
-        "dot_size": 8,
-        "dot_color": "#FFFFFF",
-        "dot_outline_color": "#88000000",
-        "dot_outline_width": 1,
         "show_direction_line": True,
         "direction_line_head_scale": 0.9,
         "direction_line_tail_scale": 0.2,
-        "direction_line_style": 0,
         "direction_line_width": 3,
         "direction_line_color": "#CCFF2200",
         "show_yaw_line": True,
         "yaw_line_head_scale": 0.9,
         "yaw_line_tail_scale": 0.2,
-        "yaw_line_style": 0,
         "yaw_line_width": 3,
         "yaw_line_color": "#CC22FF00",
+        "show_dot": True,
+        "dot_size": 8,
+        "dot_color": "#FFFFFF",
+        "dot_outline_color": "#88000000",
+        "dot_outline_width": 1,
         "show_center_mark": True,
         "center_mark_length_scale": 1,
         "center_mark_style": 1,
